<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#96B3B0"
    android:backgroundTint="#D3EAE8"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter your name:"
        android:id="@+id/namePrompt"
        android:textSize="30sp"
        />

    <EditText
        android:id="@+id/typeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Type your name here."
        android:minHeight="48dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoreTxt"
        android:textColor="#009688"
        android:gravity="center"
        android:textSize="50sp" />


    <TextView
        android:id="@+id/scoreNumberTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_scoreTxt"
        android:textAlignment="center"
        android:textColor="#FF5722"
        android:gravity="center"
        android:textSize="40sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emailButton"
            android:text="@string/email_scoreTxt"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/highScoresTV"
            android:text="nothing yet"/>
    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SEND TO FB"
         />

    <Button
        android:id="@+id/retrieveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="RETRIEVE FROM FB"
        />

    <TableLayout
        android:id="@+id/highScores"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

</LinearLayout>